src/components/shared/Navbar/Navbar.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Source+Sans+3:wght@200..900&display=swap");

.navbar {
  height: var(--navbar-height);
  width: 100%;
  position: fixed;
  z-index: 1000;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 2rem;
}

.navbar__logo {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  font-family: "Inter", sans-serif;
  font-size: 2rem;
  font-weight: 800;
  letter-spacing: 3px;
  text-transform: uppercase;
  color: aliceblue;
  text-decoration: none;
  text-shadow: 1px 1px 5px black;
}

.navbar__logo svg {
  width: 3rem;
  height: auto;
}

.navbar__links {
  display: flex;
  align-items: center;
  gap: 6rem;
}

.navbar__link {
  font-family: "Source Sans 3", sans-serif;
  font-size: 1.1rem;
  font-weight: 500;
  color: aliceblue;
  text-decoration: none;
  transition: color 0.3s ease;
  text-shadow: 0 0 5px var(--bg-color);
}

.navbar__link:hover {
  color: var(--color-lava);
}

.navbar__contact {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "Source Sans 3", sans-serif;
  font-size: 1.2rem;
  font-weight: 500;
  padding: 0.5rem 2rem;
  border-radius: 5px;
  border: 2px solid aliceblue;
  background-color: transparent;
  color: aliceblue;
  text-decoration: none;
  transition:
    background-color 0.3s ease,
    color 0.3s ease;
}

.navbar__contact:hover {
  background-color: aliceblue;
  color: black;
}

@media (max-width: 1024px) {
  .navbar {
    height: 75px;
    background-color: var(--bg-color);
  }

  .navbar__links {
    display: none;
  }
}

@media (max-width: 767px) {
  .navbar {
    padding: 0 1rem;
    height: 60px;
  }

  .navbar__logo {
    font-size: 1.5rem;
  }

  .navbar__logo svg {
    width: 2.5rem;
  }

  .navbar__contact {
    font-size: 1.1rem;
    padding: 0.5rem 1.4rem;
  }
}

